Replace bad-idea with good-idea

--- a/index.html
+++ b/index.html
@@ -2,16 +2,27 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <script src="style.css"></script>
     <title>🦠COVID-19 Response⚠️⚠️</title>
   </head>
-    <body style="background-color:#ff8201;">
-    <img src="sush.png" width="1518">
-
-<a href="index2.html"><h1 style="float:left;color:#00a;">➡Our Organization Centres</h1></a>
-<a href="index3.html"><h1 style="float:right;margin-right:10px;color:#00a">➡Infected with Covid-19?Fill this Form</h1></a>
-<a href="index4.html"><h1 style="float:left;margin-left:80px;color:#00a">➡How to prevent COVID-19?</h1></a>
-<a href="index5.html"><h1 style="float:right;color:#00a">➡Authorized Persons only!!</h1></a>
-<a href="index6.html"><h1 style="float:left;margin-left:450px;color:#00a">➡About Us!!</h1></a>
+  <style> A {
+    text-decoration: none;
+  }
+  </style>
+    <body>
+<img src="sush.png"></img>
+<style>
+body {
+  background-image: url('corona virus.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 99% 98%;
+  background-color:#ff8201;
+}
+</style>
+<a href="index2.html"><h1 style="color:#fffb00;width: 400px;padding: 20px;border: 15px solid #ef9282;margin:10px;">➡Our Organization Centres</h1></a>
+<a href="index3.html"><h1 style="color:#fffb00;width: 550px;padding: 20px;border: 15px solid #ef9282;margin:10px;position:relative;">➡Infected with Covid-19?Fill this Form</h1></a>
+<a href="index4.html"><h1 style="color:#fffb00;width: 400px;padding: 20px;border: 15px solid #ef9282;margin:10px;position:relative;">➡How to prevent COVID-19?</h1></a>
+<a href="index5.html"><h1 style="color:#fffb00;width: 400px;padding: 20px;border: 15px solid #ef9282;margin:10px;position:relative;">➡Authorized Persons only!!</h1></a>
+<a href="index6.html"><h1 style="color:#fffb00;width: 400px;padding: 20px;border: 15px solid #ef9282;margin:10px;position:relative;">➡About Us!!</h1></a>
   </body>
-</html>
+  </html>
