--- a/index2.html
+++ b/index2.html
@@ -4,12 +4,25 @@
     <meta charset="utf-8">
     <title>Our Organization Centres...!</title>
   </head>
-  <body style="background-color:#fffcd4">
-<h1>Our Organization Centres</h1>
- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d127591.73868506715!2d45.23662410208661!3d2.059199262725203!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3d58425955ce6b53%3A0xbb20eaaa52cc59d9!2sMogadishu%2C%20Somalia!5e0!3m2!1sen!2sin!4v1603463446579!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31082.098153138835!2d-14.127945989641628!3d13.145849707459563!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xee57d4f403f06f9%3A0x7b55fea38d499c8e!2sVelingara%2C%20Senegal!5e0!3m2!1sen!2sin!4v1603463668481!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d81019.62070949335!2d26.174127706001904!3d50.611080454714134!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x472f6caa2d7c89d7%3A0x27481abdbc4e484!2sRivne%2C%20Rivne%20Oblast%2C%20Ukraine!5e0!3m2!1sen!2sin!4v1603463825520!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d109049.92308712698!2d27.185292193266836!3d31.336617283779027!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1461f9330b3a3ebb%3A0x69c946b5ce3eeaf2!2sMarsa%20Matruh%2C%20Mersa%20Matruh%2C%20Matrouh%20Governorate%2C%20Egypt!5e0!3m2!1sen!2sin!4v1603464056505!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-
+  <body>
+    <style>
+    body {
+      background-image: url('sush.jpg');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: 100% 100%;
+    }
+    </style>
+<h1 style="color:red">🏢Our Organization Centres🏢</h1>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d127591.73868506715!2d45.23662410208661!3d2.059199262725203!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3d58425955ce6b53%3A0xbb20eaaa52cc59d9!2sMogadishu%2C%20Somalia!5e0!3m2!1sen!2sin!4v1603463446579!5m2!1sen!2sin" width="740" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31082.098153138835!2d-14.127945989641628!3d13.145849707459563!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xee57d4f403f06f9%3A0x7b55fea38d499c8e!2sVelingara%2C%20Senegal!5e0!3m2!1sen!2sin!4v1603463668481!5m2!1sen!2sin" width="759" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d81019.62070949335!2d26.174127706001904!3d50.611080454714134!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x472f6caa2d7c89d7%3A0x27481abdbc4e484!2sRivne%2C%20Rivne%20Oblast%2C%20Ukraine!5e0!3m2!1sen!2sin!4v1603463825520!5m2!1sen!2sin" width="740" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d109049.92308712698!2d27.185292193266836!3d31.336617283779027!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1461f9330b3a3ebb%3A0x69c946b5ce3eeaf2!2sMarsa%20Matruh%2C%20Mersa%20Matruh%2C%20Matrouh%20Governorate%2C%20Egypt!5e0!3m2!1sen!2sin!4v1603464056505!5m2!1sen!2sin" width="759" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1653407.5466539748!2d139.74706960303948!3d37.18757552432831!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188dd49a29cf49%3A0x61fc5462a4a58119!2sYanaka%2C%20Taito%20City%2C%20Tokyo%20110-0001%2C%20Japan!5e0!3m2!1sen!2sin!4v1603810169599!5m2!1sen!2sin" width="740" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d119037.50712707436!2d81.2680344059!3d21.195253419109605!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a293cccec49ed45%3A0x2b3ff3bd73c91877!2sBhilai%2C%20Chhattisgarh!5e0!3m2!1sen!2sin!4v1603810888578!5m2!1sen!2sin" width="759" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d412577.53418795613!2d37.2638657!3d36.1114746!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x152ff813b98135af%3A0x967e5e5fc542c32a!2sAleppo%2C%20Syria!5e0!3m2!1sen!2sin!4v1603810490790!5m2!1sen!2sin" width="740" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d109555.75085405364!2d66.3967211812607!3d30.8973675866649!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ed479f154c67243%3A0xbdb370c53661e4d!2sChaman%2C%20Killa%20Abdullah%2C%20Balochistan%2C%20Pakistan!5e0!3m2!1sen!2sin!4v1603810813140!5m2!1sen!2sin" width="759" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d45516.49242570539!2d-109.09778894401083!3d44.51964354974054!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x534c1ebf215bbe5d%3A0xba76f4463ccdcc50!2sCody%2C%20WY%2082414%2C%20USA!5e0!3m2!1sen!2sin!4v1603811144007!5m2!1sen!2sin" width="740" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31034.391170961222!2d33.324426460635465!3d-13.51723974196146!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x191f3bfa3e268c65%3A0x2f5b202bb0634049!2sMkhota%2C%20Malawi!5e0!3m2!1sen!2sin!4v1603811281019!5m2!1sen!2sin" width="759" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
   </body>
 </html>
