Replace bad idea with good idea

--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 <img src="sush.png"></img>
 <style>
 body {
-  background-image: url('corona virus.jpg');
+  background-image: url('covid.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 99% 98%;
   background-color:#ff8201;
 }
 </style>
-<a href="index2.html"><h1 style="color:#fffb00;width: 400px;padding: 20px;border: 15px solid #ef9282;margin:10px;">➡Our Organization Centres</h1></a>
-<a href="index3.html"><h1 style="color:#fffb00;width: 550px;padding: 20px;border: 15px solid #ef9282;margin:10px;position:relative;">➡Infected with Covid-19?Fill this Form</h1></a>
-<a href="index4.html"><h1 style="color:#fffb00;width: 400px;padding: 20px;border: 15px solid #ef9282;margin:10px;position:relative;">➡How to prevent COVID-19?</h1></a>
-<a href="index5.html"><h1 style="color:#fffb00;width: 400px;padding: 20px;border: 15px solid #ef9282;margin:10px;position:relative;">➡Authorized Persons only!!</h1></a>
-<a href="index6.html"><h1 style="color:#fffb00;width: 400px;padding: 20px;border: 15px solid #ef9282;margin:10px;position:relative;">➡About Us!!</h1></a>
+<a href="index2.html"><h1 style="color:#ff0084;width: 400px;padding: 20px;border: 15px solid #ef9282;margin:10px;">➡Our Organization Centres</h1></a>
+<a href="index3.html"><h1 style="color:#ff0084;width: 550px;padding: 20px;border: 15px solid #ef9282;margin:10px;position:relative;">➡Infected with Covid-19?Fill this Form</h1></a>
+<a href="index4.html"><h1 style="color:#ff0084;width: 400px;padding: 20px;border: 15px solid #ef9282;margin:10px;position:relative;">➡How to prevent COVID-19?</h1></a>
+<a href="index5.html"><h1 style="color:#ff0084;width: 400px;padding: 20px;border: 15px solid #ef9282;margin:10px;position:relative;">➡Authorized Persons only!!</h1></a>
+<a href="index6.html"><h1 style="color:#ff0084;width: 400px;padding: 20px;border: 15px solid #ef9282;margin:10px;position:relative;">➡About Us!!</h1></a>
   </body>
   </html>
