--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <img src="sush.png"></img>
 <style>
 body {
-  background-image: url('covid.jpg');
+  background-image: url('https://www.fda.gov/files/covid19-1600x900.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 99% 98%;
