--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@ body {
 <a href="index4.html"><h1 style="color:#ff0084;width: 400px;padding: 20px;border: 15px solid #ef9282;margin:10px;position:relative;">➡How to prevent COVID-19?</h1></a>
 <a href="index5.html"><h1 style="color:#ff0084;width: 400px;padding: 20px;border: 15px solid #ef9282;margin:10px;position:relative;">➡Authorized Persons only!!</h1></a>
 <a href="index6.html"><h1 style="color:#ff0084;width: 400px;padding: 20px;border: 15px solid #ef9282;margin:10px;position:relative;">➡About Us!!</h1></a>
+<a href="education.html"><h1 style="color:#ff0084;width: 400px;padding: 20px;border: 15px solid #ef9282;margin:10px;position:relative;">➡Education for Children!!</h1></a>
   </body>
   </html>
