--- a/index6.html
+++ b/index6.html
@@ -5,12 +5,12 @@
     <title></title>
   </head>
   <body style="background-color:#ff8201">
-<h1>Our History!!!</h1>
+<center><h1>Our History!!!</h1>
 <b><p>Our organization was estabilished on 2nd February 2020!! We were very curious to know about the new virus(COVID-19).</p></b>
 <b><p>Later,we began to research on the virus with help of the Chinese Government.We found out that it belonged to the coronavirus family!!.</p></b>
 <b><p>Soon,it turned into a pandemic.....</p></b>
 <br></br>
 <b><p>We soon thought to provide services to people and created this website to help people.</p></b>
-<b><p>We named our organization "The CoviDestroyers" and began doing help to people...</p></b>
+<b><p>We named our organization "The CoviDestroyers" and began doing help to people...</p></b><center>
   </body>
 </html>
