--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+     <link rel = "stylesheet" type = "text/css" href = "style.css" />
     <meta charset="utf-8">
     <title>🦠COVID-19 Response⚠️⚠️</title>
   </head>
@@ -9,6 +10,9 @@
   }
   </style>
     <body>
+<script type="text/javascript" src="script.js"></script>
+<div id="loader"></div>
+<div id="content"></div>
 <img src="sush.png"></img>
 <style>
 body {
