Replace bad idea with good idea

--- a/index3.html
+++ b/index3.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+ <link rel = "stylesheet" type = "text/css" href = "style.css" />
     <meta charset="utf-8">
     <title>Covid-19 Survey Form!</title>
   </head>
   <body style="background-color:#ff5272">
+    <script type="text/javascript" src="script.js"></script>
+    <div id="loader"></div>
+    <div id="content"></div>
   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeIWG8mw7BMBRe_RAFwbVx6b07EkQMmqSPwLI8MCtRZbqzZhQ/viewform?embedded=true" width="1500" height="954" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
   </body>
 </html>
