--- a/index5.html
+++ b/index5.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+     <link rel = "stylesheet" type = "text/css" href = "style.css" />
     <meta charset="utf-8">
     <title>For Government Authorities...!</title>
   </head>
   <body>
+    <script type="text/javascript" src="script.js"></script>
+    <div id="loader"></div>
+    <div id="content"></div>
 <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRrSTs5GoJ-vYjqW4H0VWWVDgnm_vpygrtuG3Z3wq-Y3vGymSDpnGEBukDMfyUZUUocr1VJEUiTLl2J/pubhtml?widget=true&amp;headers=false"   width="1500" height="700"></iframe>
   </body>
 </html>
