--- a/index6.html
+++ b/index6.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+     <link rel = "stylesheet" type = "text/css" href = "style.css" />
     <meta charset="utf-8">
     <title></title>
   </head>
   <body style="background-color:#ff8201">
+    <script type="text/javascript" src="script.js"></script>
+    <div id="loader"></div>
+    <div id="content"></div>
 <center><h1>Our History!!!</h1>
 <b><p>Our organization was estabilished on 2nd February 2020!! We were very curious to know about the new virus(COVID-19).</p></b>
 <b><p>Later,we began to research on the virus with help of the Chinese Government.We found out that it belonged to the coronavirus family!!.</p></b>
