--- a/education.html
+++ b/education.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+     <link rel = "stylesheet" type = "text/css" href = "style.css" />
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
-
+    <script type="text/javascript" src="script.js"></script>
+    <div id="loader"></div>
+    <div id="content"></div>
   </body>
 </html>
