--- a/index2.html
+++ b/index2.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+     <link rel = "stylesheet" type = "text/css" href = "style.css" />
     <meta charset="utf-8">
     <title>Our Organization Centres...!</title>
   </head>
   <body>
+    <script type="text/javascript" src="script.js"></script>
+    <div id="loader"></div>
+    <div id="content"></div>
     <style>
     body {
       background-image: url('sush.jpg');
