--- a/index4.html
+++ b/index4.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+ <link rel = "stylesheet" type = "text/css" href = "style.css" />
     <meta charset="utf-8">
     <title>Video and Image Gallery</title>
   </head>
   <body style="background-color:#00ffd5">
+    <script type="text/javascript" src="script.js"></script>
+    <div id="loader"></div>
+    <div id="content"></div>
 <h1>The Video and Image Gallery for Awareness</h1>
 <iframe width="1500" height="650" src="https://www.youtube.com/embed/1APwq1df6Mw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
