--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
      <link rel = "stylesheet" type = "text/css" href = "style.css" />
+     <link rel = "stylesheet" type = "text/css" href = "sush.css" />
     <meta charset="utf-8">
     <title>🦠COVID-19 Response⚠️⚠️</title>
   </head>
